--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body{
   margin: 0;
+  margin-top: 0;
 }
 
 #boxHead{    
   background-color: grey;
   width: 100%;
-  height: 120px;    
+  height: 120px;
+  margin-top: 0;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
+  align-items: center;
 }
 
 .box{
@@ -14,12 +20,26 @@ body{
   width: auto;
   margin-top: 10px;
   height: 200px;
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  margin: 5px;
+  transition:
+    box-shadow 0.3s,
+    transform 0.3s;
 
   text-align: center;
 }
 .box:hover{
   background-color: black;
   color: white;
+}
+.box:hover,
+.box:focus,
+.box:active {
+  box-shadow: 1px 10px 10px -10px rgba(0, 0, 24, 0.5);
+  transform: scale(1.2);
 }
 
 .parent1{
