--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ body::before{
 }
 
 /*estilo de los subtitulos en las cajas*/
-#subtitulos{
-  font-size: 20;
+.subtitulos{
+  color: red;
 }
 
 .parent1{
@@ -106,6 +106,11 @@ body::before{
   grid-column-gap: 10px;
   grid-row-gap: 4px;
 }
+
+.linkOtraPagina{
+  display: block;  
+  text-decoration: none;
+} 
 
 .infoBoxes{
   background-color: rgb(89, 134, 169);
