--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
-body{
+#indexBody{
     position: relative;
     margin: 0;
     padding: 0;
     min-height: 100vh; /* Asegura que el body tenga altura */
 }
-body::before{
+#indexBody::before{
   content: ""; 
   position: absolute;
   top: 0;
@@ -25,7 +25,7 @@ body::before{
   grid-template-columns: 1fr 2fr;
   grid-column-gap: 5px;
 
-  background-color: rgb(7, 169, 93);
+  background-color: #575757 ;
   width: 100%;
   height: 120px;
   margin-top: 0;
@@ -41,7 +41,8 @@ body::before{
   height: 100%;
   align-items: center;
   font-size: 20px;
-  background-color: blue;
+  background-color: #2b2b2b;
+  color: white;
 }
 #boxHeadSubtitle{
   display: grid;
@@ -112,13 +113,17 @@ body::before{
   text-decoration: none;
 } 
 
-.infoBoxes{
-  background-color: rgb(89, 134, 169);
+
+/*paginas con la informacion independiente*/
+.infoPages{
+  background-color: #000000;
 }
 
 footer{
   display: flex;
   flex: 1;
   min-height: 30vh;
-  flex-direction: column;
+  flex-direction: column; 
+  background-color: #828282;
+  color: white;
 }
