--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'fuenteNueva';
+  src: url('fuentes/Ethnocentric-Regular.otf') format('truetype');
+}
+
+
+
 
 #indexBody{
     position: relative;
@@ -35,7 +42,7 @@
 #boxHeadTittle{
   display: grid;
   border: 2px solid black;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
 
   height: 100%;
@@ -106,7 +113,7 @@
 
 /*estilo de los subtitulos en las cajas*/
 .subtitulos{
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: nuevaFuente;
 }
 
 .parent1{
