--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('imgs/circuito_imagen_back.jpg'); 
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url('imgs/circuito_imagen_back.jpg') no-repeat;
   background-size: cover;
   background-position: center;
   filter: blur(1px);
