--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@
   z-index: 10;  
   box-shadow: 1px 10px 10px -10px rgba(0, 0, 24, 0.5);
   transform: scale(1.2);
+  border: 2px solid white
 }
 /*configuracion de las imagenes de los componentes*/
 .box:hover svg line{
@@ -150,4 +151,35 @@ footer{
   flex-direction: column; 
   background-color: #2b2b2b;
   color: white;
+}
+
+/*estilos para el contenido en cada pagina idependiente de los circuitos*/
+#contenido{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 12px;
+  grid-row-gap: 12px;
+  padding: 20px;
+}
+#subContenido{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+.txtInfo{
+  font-size: 1.3rem;
+  text-align: justify;
+}
+
+.grid-image{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr;
+}
+#subGridImage{
+  width: 100%;
+  object-fit: fill;
+  object-position: center;
 }
