--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ footer{
 #subContenido{
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 3fr;
 }
 
 .txtInfo{
@@ -176,9 +176,9 @@ footer{
 .grid-image{
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr;
 }
-#subGridImage{
+.subGridImage{
   width: 100%;
   object-fit: fill;
   object-position: center;
