--- a/style.css
+++ b/style.css
@@ -145,12 +145,17 @@
 }
 
 footer{
-  display: flex;
-  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
   min-height: 30vh;
-  flex-direction: column; 
   background-color: #2b2b2b;
   color: white;
+}
+#footerContainer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 /*estilos para el contenido en cada pagina idependiente de los circuitos*/
@@ -183,3 +188,5 @@ footer{
   object-fit: fill;
   object-position: center;
 }
+
+
