--- a/style.css
+++ b/style.css
@@ -168,6 +168,9 @@ footer{
   grid-column-gap: 12px;
   grid-row-gap: 12px;
   padding: 20px;
+  background-color: #2b2b2b;
+  margin: 20px;
+  border-radius: 40px 40px 40px 40px;
 }
 #subContenido{
   display: grid;
